Sun 17 May 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Remove unnecessary CODEOWNERS

Fri 15 May 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Bump version to 0.0.3
	* Add nested directory support

Sun 10 May 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Remove unnecessary renders and hard-coded HTML tags in wirters
	* Remove unnecessary renders and hard-coded HTML tags in wirters
	* Bump version to 0.0.2
	* Add config.toml support

Fri 01 May 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Initial release 0.0.1

Thu 30 Apr 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Name this project as Nib

Wed 29 Apr 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Add integration tests for server
	* Add static files support
	* Add theme directory

Thu 23 Apr 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Add a HTML renderer function

Sun 19 Apr 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Initial commit ;)