@@ -1,5 +1,6 @@
 <header>
-  <h2 class="article-title">{{article.title}}</h2>
+  <h1 class="article-title">{{article.title}}</h1>
+  <span class="date">{{article.date}}</span>
 </header>
 <div class="content">
   {{article.content}}
