@@ -1,3 +1,3 @@
-<h1 class="title">
+<h2 class="title">
   <a href="{{website.url}}">{{website.title}}</a>
-</h1>
+</h2>
