@@ -1,4 +1,4 @@
-<a class="title" href="{{article._path}}"><h3>{{article.title}}</h3></a>
+<h3 class="title"><a href="{{article._path}}">{{article.title}}</a></h3>
 <span class="date">{{article.date}}</span>
 {{#if article.description}}
 <p class="description">{{article.description}}</p>
